--- a/style.css
+++ b/style.css
@@ -93,7 +93,11 @@ html, body {
   font-size: 3em;
   margin: 1rem;
 }
-
+.fa-php {
+  color: #787CB5;
+  font-size: 3em;
+  margin: 1rem;
+}
 
 /*---Media Queries (for multiple screen sizes) --*/
 @media (max-width: 992px) {
