--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@ html, body {
   margin: 1rem;
 }
 
+/*---Styling SLD---*/
+.scoreI {
+  font-size: 300%;
+  color: maroon;
+}
+
 /*---Media Queries (for multiple screen sizes) --*/
 @media (max-width: 992px) {
 
